[package]
name = "os"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[workspace]
members = [
    "kernel",
    "macros",
    "include",
    "include/testing"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bootloader_api = "0.11.0-beta.4"
ovmf-prebuilt = "0.1.0-alpha.1"

[build-dependencies]
bootloader = { path = "../bootloader" }
include = { path = "include" }
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
fs_extra = "1.2.0"

[package.metadata.bootimage]
run-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-display", "none"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"