[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bootloader_api = "0.11.0-beta.4"
bootloader-x86_64-common = "0.11.0-beta.4"

# Allocator
linked_list_allocator = "0.10.4"

# Device specific
x86_64 = "0.14.10"
pic8259 = "0.10.1"
uart_16550 = "0.2.10"
pc-keyboard = "0.6.1"
pci-driver = "0.1.2"

# Logging
log = "0.4.17"

# Helper
lazy_static = { version = "1.0.1", features = ["spin_no_std"] }
spin = "0.9.4"
volatile = "0.4.5"
spinning_top = "0.2.4"
conquer-once = { version = "0.3.2", default-features = false }

[dependencies.crossbeam-queue]
version = "0.3.8"
default-features = false
features = ["alloc"]

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[package.metadata.bootimage]
run-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-display", "none"]